# ardy

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml
backend/src/: db.rs  main.rs  models.rs  routes.rs
frontend/: Cargo.toml  Trunk.toml  index.html  shell.nix
frontend/src/: component.rs
frontend/src/component/: add_transaction_overlay.rs  app.rs  profit_loss.rs  search_bar.rs  transaction_list.rs
frontend/static/: style.css
rs-backend/: Cargo.toml
rs-backend/src/: db.rs  main.rs  models.rs  routes.rs
rs-frontend/: index.html
rs-frontend/src/: component.rs  main.rs
rs-frontend/src/component/: add_transaction_overlay.rs  app.rs  search_bar.rs  transaction_list.rs
rs-frontend/static/: style.css
