[package]
name = "rs-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
serde = { version = "1.0.186", features = ["derive"] }
chrono = "0.4"
rusqlite = { version = "0.29.0", features = ["bundled"] }